Bug 1652300 - Keep lock around mState in `CacheEntry::InvokeAvailableCallback`, r=michal,necko-reviewers

Differential Revision: https://phabricator.services.mozilla.com/D84495