netwerk/cache2/CacheEntry.cpp
@@ -817,7 +817,11 @@ void CacheEntry::InvokeAvailableCallback(Callback const& aCallback) {
 
   nsresult rv;
 
-  uint32_t const state = mState;
+  uint32_t state;
+  {
+    mozilla::MutexAutoLock lock(mLock);
+    state = mState;
+  }
 
   // When we are here, the entry must be loaded from disk
   MOZ_ASSERT(state > LOADING || mIsDoomed);
